make font bigger, fix spacing

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -30,7 +30,7 @@ html, body {
   background: White;
   color: Black;
   font-family: Georgia;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 div#main {
   margin: 0;
